--- a/index.css
+++ b/index.css
@@ -4,6 +4,9 @@
     background-color: rgb(145, 145, 145);
     display: flex;
     justify-content: center;
+    align-content: center;
+    width: calc(100% - 50px);
+    margin: auto;
     font-family: PF DinDisplay Pro, Avenir ,Helvetica ,Arial ,sans-serif;
     -webkit-font-smoothing: antialiased;
     color: #2c3e50;
@@ -12,8 +15,9 @@
 
 .test {
     background-image: url('/images/fon.png');
-    max-width: 1367px;
-    min-width: 1367px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 1367px;
     height: 1100px;
     display: flex;
     justify-content: center;
@@ -222,6 +226,7 @@
 .present__link {
     color:rgb(58, 212, 240)
 }
+
 
 
 
