--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-@import url('fonts/font_DinDisplay.css');
+@import url('./fonts/font_DinDisplay.css');
 
 .root {
     background-color: rgb(145, 145, 145);
